--- a/1_paginasHTML/como_adoptar.html
+++ b/1_paginasHTML/como_adoptar.html
@@ -15,7 +15,7 @@
         <nav>
             <a class="link-header" href="#">Inicio</a>
             <a class="link-header" href="#">Como adoptar</a>
-            <a class="link-header" href="#">Donar</a>
+            <a id="sesion" class="link-header" href="#">Iniciar Sesión</a>
 
             <!-- <div>Menu</div> -->
         </nav>
