Modificaciones páginas html

--- a/1_paginasHTML/adoptar_animal.html
+++ b/1_paginasHTML/adoptar_animal.html
@@ -34,7 +34,8 @@
                         <span>Especie:</span>
                         <span>Raza:</span>
                         <span>Edad:</span>
-                        <span>Sexo:</span> 
+                        <span>Sexo:</span>
+                        <span>Peso:</span> 
                     </div>
 
                     <div class="especificaciones datos">
@@ -42,12 +43,13 @@
                         <span>Raza</span>
                         <span>Edad</span>
                         <span>Sexo</span>
+                        <span>Peso</span> 
                     </div>
                 </div>
 
                 <div class="descripcion-mascota">
                     <p>
-                        Juanito es un gato siamés de 2 años con un carácter curioso y afectuoso. Sus ojos azules y su elegante pelaje lo hacen destacar en cualquier lugar. Juanito es juguetón y le encanta explorar su entorno, pero también aprecia los mimos y caricias. Es perfecto para familias o personas que buscan un compañero fiel y entretenido. Juanito está castrado y al día con sus vacunas. Adóptalo y descubre la maravilla de tener un amigo felino leal y encantador.  Es perfecto para familias o personas que buscan un compañero fiel y entretenido. Juanito está castrado y al día con sus vacunas. Adóptalo y descubre la maravilla de tener un amigo felino leal y encantador.</p>
+                        Nala es una hermosa gata atigrada de 1 año, llena de energía y ternura. Su pelaje suave y sus ojos brillantes la convierten en una compañera irresistible. Es juguetona, curiosa y disfruta tanto de la compañía humana como de sus ratos de independencia. Le encanta perseguir juguetes y explorar cada rincón de la casa. Nala se adapta fácilmente a nuevos entornos y es ideal para cualquier hogar que le ofrezca amor y cuidado. También le gusta observar el mundo desde la ventana y acurrucarse en lugares acogedores. Está esterilizada y vacunada, lista para ser parte de tu familia. ¡Adopta a Nala y añade un toque de dulzura y diversión a tu vida!</p>
                     </p>
                 </div>
             </article>
